# rustfull

./: .dockerignore  .env  Cargo.toml  Dockerfile  TODO.md  docker-compose.only-db.yml  docker-compose.yml  hello.html
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240424_180528_test_migration.rs
src/: lib.rs  main.rs  state.rs
src/handlers/: mod.rs
