[workspace]
members = [".", "entity", "migration"]

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"


[package]
name = "rustfull"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.30"
sea-orm = { version = "1.0.0-rc.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde_json = "1.0.115"
migration = { path = "./migration" }
entity = { path = "./entity" }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
